# LiteTube

./: LICENSE  README.md  glitch.json  liblitetube.py  main.py  pyproject.toml  run.sh  watch.py
liblitetube/: channel.py  lt_misc.py  main.py  search.py  watch.py
templates/: channel.html  index.html  layout.html  playlist.html  search.html  watch.html
templates/errors/: 404.html  500.html
