[tool.poetry]
name = "LiteTube"
version = "0.3.3"
description = "adfree unblocked youtube frontend"
authors = ["Mollomm1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
Flask = "^2.2.3"
yt-dlp = "^2023.3.4"
urllib3 = "^1.26.5"
timeago = "^1.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
